[project]
name = "escapy"
version = "0.0.1"
description = "Lightweight escape-room game library built on pygame"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["pygame>=2.0"]

[project.optional-dependencies]
dev = ["pip-tools", "ruff", "pre-commit"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"