[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "escapy"
version = "0.0.1"
description = "Lightweight escape-room game library built on pygame"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
pygame = ["pygame>=2.0"]
dev = ["pip-tools", "ruff", "pre-commit"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"